Improve return logging and lists
